# src/app/api/model/models.ts
@@ -1,9 +1,10 @@
 export * from './assignmentGetDto';
 export * from './authenticationRequest';
+export * from './byteArrayResource';
 export * from './courseDto';
 export * from './courseEnrollmentDetailsDto';
 export * from './detailedAssignmentDto';
-export * from './fileDto';
+export * from './fileDetailsDto';
 export * from './modelAndView';
 export * from './saveCourseRequest';
 export * from './studentAndAssignmentStatusDto';
